// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalCard /> by default matches with snapshot 1`] = `
<div
  className="sc-EHOje kJvSfu"
>
  <img
    alt=""
    className="sc-ifAKCX fexEDx"
    src="#image"
  />
  <h1
    className="sc-bwzfXH ffdHnv"
  >
    Custom title
  </h1>
  
</div>
`;

exports[`<VerticalCard /> with some props matches with snapshot 1`] = `
<div
  className="sc-EHOje kJvSfu"
>
  <img
    alt="Image alt"
    className="sc-ifAKCX fexEDx"
    src="#image"
  />
  <h1
    className="sc-bwzfXH ffdHnv"
  >
    Custom title
  </h1>
  <div
    className="sc-bdVaJa ggQxmM"
  >
    <p
      className="sc-htpNat ixwtRD"
    >
      Custom text
    </p>
  </div>
</div>
`;
